--- a/SnapchatClone/Base.lproj/Main.storyboard
+++ b/SnapchatClone/Base.lproj/Main.storyboard
@@ -93,28 +93,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZI2-Jm-hq9">
-                                <rect key="frame" x="55" y="86" width="282" height="505"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="olP-qh-O9n">
-                                <rect key="frame" x="139" y="652" width="115" height="35"/>
+                                <rect key="frame" x="138" y="655" width="115" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="uh7-Au-qRQ"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Upload"/>
                                 <connections>
                                     <action selector="uploadButton:" destination="UKk-gU-eEs" eventType="touchUpInside" id="WbS-Ly-L61"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="folder.badge.plus" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ZI2-Jm-hq9">
+                                <rect key="frame" x="55" y="199.33333333333331" width="282" height="299.00000000000006"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="301.66666666666674" id="2Jn-2u-cLR"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="UE8-Wz-pyi"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="ZI2-Jm-hq9" firstAttribute="centerX" secondItem="olP-qh-O9n" secondAttribute="centerX" id="039-4r-CiI"/>
-                            <constraint firstItem="olP-qh-O9n" firstAttribute="top" secondItem="ZI2-Jm-hq9" secondAttribute="bottom" constant="61" id="HBy-xo-Ddm"/>
-                            <constraint firstItem="olP-qh-O9n" firstAttribute="leading" secondItem="UE8-Wz-pyi" secondAttribute="leading" constant="139" id="beQ-mU-AD2"/>
-                            <constraint firstItem="ZI2-Jm-hq9" firstAttribute="leading" secondItem="UE8-Wz-pyi" secondAttribute="leading" constant="55" id="fiU-fI-8oS"/>
-                            <constraint firstItem="UE8-Wz-pyi" firstAttribute="bottom" secondItem="olP-qh-O9n" secondAttribute="bottom" constant="116" id="oDW-hi-3uY"/>
-                            <constraint firstItem="ZI2-Jm-hq9" firstAttribute="top" secondItem="UE8-Wz-pyi" secondAttribute="top" constant="86" id="oU3-jM-chk"/>
-                            <constraint firstItem="ZI2-Jm-hq9" firstAttribute="centerX" secondItem="kHz-dR-jMl" secondAttribute="centerX" id="zc4-Ou-Smx"/>
+                            <constraint firstItem="UE8-Wz-pyi" firstAttribute="trailing" secondItem="ZI2-Jm-hq9" secondAttribute="trailing" constant="57.333333333333314" id="7lw-f0-Qh0"/>
+                            <constraint firstItem="olP-qh-O9n" firstAttribute="leading" secondItem="UE8-Wz-pyi" secondAttribute="leading" constant="138" id="FuB-pI-TAT"/>
+                            <constraint firstItem="ZI2-Jm-hq9" firstAttribute="top" secondItem="UE8-Wz-pyi" secondAttribute="top" constant="198" id="P2L-ie-l6B"/>
+                            <constraint firstItem="UE8-Wz-pyi" firstAttribute="bottom" secondItem="olP-qh-O9n" secondAttribute="bottom" constant="104" id="XaJ-Ge-T56"/>
+                            <constraint firstItem="ZI2-Jm-hq9" firstAttribute="leading" secondItem="UE8-Wz-pyi" secondAttribute="leading" constant="55" id="ZG6-1q-VtC"/>
+                            <constraint firstItem="ZI2-Jm-hq9" firstAttribute="centerX" secondItem="olP-qh-O9n" secondAttribute="centerX" id="jP7-Bz-EdH"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Upload" image="square.and.arrow.up" catalog="system" id="fMU-TY-djJ"/>
@@ -246,6 +251,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="folder.badge.plus" catalog="system" width="128" height="92"/>
         <image name="gear" catalog="system" width="128" height="122"/>
         <image name="house" catalog="system" width="128" height="104"/>
         <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
